--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -40,7 +40,7 @@ jobs:
         key: cached_version
     - name: Should we start new build?
       id: should_build
-      # if: steps.version_check.outputs.cache-hit != 'true'
+      if: steps.version_check.outputs.cache-hit != 'true'
       run: echo "::set-output name=should_build::true"
     - name: Create Release
       id: create_release
